--- a/HomeWorks/Views/Pro/Orders.cshtml
+++ b/HomeWorks/Views/Pro/Orders.cshtml
@@ -41,5 +41,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="He" asp-action="HeIndex" asp-route-id="@Model.Product.MeId" class="btn btn-primary">返回</a>
 </div>
