--- a/HomeWorks/Views/Products/Details.cshtml
+++ b/HomeWorks/Views/Products/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4>Product</h4>
+<h4>產品一覽</h4>
 <hr />
 
 @foreach (var item in Model)
@@ -71,6 +71,6 @@
     </div>
 
     <div>
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">返回</a>
     </div>
 }
