--- a/HomeWorks/Views/Members/Create.cshtml
+++ b/HomeWorks/Views/Members/Create.cshtml
@@ -1,13 +1,11 @@
 ﻿@model HomeWorks.Models.Member
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "註冊";
 }
 
 <div class="container mt-4">
-    <h1 class="mb-4">Create</h1>
-
-    <h4 class="mb-3">Member</h4>
+    <h1 class="mb-4">註冊會員</h1>
     <hr />
 
     <div class="row">
@@ -40,14 +38,10 @@
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="註冊" class="btn btn-primary" />
                 </div>
             </form>
         </div>
-    </div>
-
-    <div class="mt-4">
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </div>
 </div>
 
